dts: zuk: Update fstab firmware configuration
* Remove the vbmeta partition, that's for A/B devices only
* Switch to android_vendor for changes to the vendor node
* Shortcut system as android_system to make it more easily updatable
from other dts files
* Remove the system partition dir in common dts to decommonize it
properly for plus and row

--- a/arch/arm/boot/dts/qcom/zuk/common.dtsi
+++ b/arch/arm/boot/dts/qcom/zuk/common.dtsi
@@ -362,11 +362,9 @@
 
 &firmware {
 	android {
+		/delete-node/ vbmeta;
 		fstab {
-			vendor {
-				fsmgr_flags = "wait";
-			};
-			system {
+			android_system: system {
 				compatible = "android,system";
 				type = "ext4";
 				mnt_flags = "ro,barrier=1,discard";
@@ -375,4 +373,8 @@
 			};
 		};
 	};
+};
+
+&android_vendor {
+				fsmgr_flags = "wait";
 };
