Revert "dts: zuk: Update fstab firmware configuration"
This reverts commit 1bf40cc4f747489706d6291a97bbf8d6d85a71f6.

--- a/arch/arm/boot/dts/qcom/zuk/common.dtsi
+++ b/arch/arm/boot/dts/qcom/zuk/common.dtsi
@@ -362,9 +362,11 @@
 
 &firmware {
 	android {
-		/delete-node/ vbmeta;
 		fstab {
-			android_system: system {
+			vendor {
+				fsmgr_flags = "wait";
+			};
+			system {
 				compatible = "android,system";
 				type = "ext4";
 				mnt_flags = "ro,barrier=1,discard";
@@ -373,8 +375,4 @@
 			};
 		};
 	};
-};
-
-&android_vendor {
-				fsmgr_flags = "wait";
 };
