--- a/arch/arm/boot/dts/qcom/zuk/z2_plus-base.dtsi
+++ b/arch/arm/boot/dts/qcom/zuk/z2_plus-base.dtsi
@@ -120,10 +120,12 @@
 	qcom,int-pwm-freq-khz = <253>;//lowest:253Khz
 };
 
-&android_vendor {
-	dev = "/dev/block/platform/soc/7464900.sdhci/by-name/factory";
-};
-
-&android_system {
-	dev = "/dev/block/platform/soc/7464900.sdhci/by-name/system";
+&firmware {
+	android {
+		fstab {
+			system {
+				dev = "/dev/block/platform/soc/7464900.sdhci/by-name/system";
+			};
+		};
+	};
 };
