factory as vendor

--- a/arch/arm/boot/dts/qcom/zuk/z2_plus-base.dtsi
+++ b/arch/arm/boot/dts/qcom/zuk/z2_plus-base.dtsi
@@ -129,3 +129,14 @@
 		};
 	};
 };
+
+&firmware {
+        android {
+                fstab {
+                        vendor {
+                                dev = "/dev/block/platform/soc/7464900.sdhci/by-name/factory";
+                        };
+                };
+        };
+}
+
